[gd_scene load_steps=15 format=2]

[ext_resource path="res://environment/GameEnvironment.gd" type="Script" id=1]
[ext_resource path="res://environment/CardNode.tscn" type="PackedScene" id=2]
[ext_resource path="res://card/Card.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/ShipNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://environment/DiscardPile.tscn" type="PackedScene" id=5]
[ext_resource path="res://environment/AiCardManager.gd" type="Script" id=6]
[ext_resource path="res://environment/GameAI.tscn" type="PackedScene" id=7]
[ext_resource path="res://environment/CardManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/TurnTimer.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/GameOverlay.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/IncomingAnnouncement.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/ScoreCounter.tscn" type="PackedScene" id=12]
[ext_resource path="res://environment/ShipNodeManager.gd" type="Script" id=13]
[ext_resource path="res://card/AiCard.tscn" type="PackedScene" id=14]

[node name="GameEnvironment" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="GameAI" parent="." instance=ExtResource( 7 )]

[node name="HandNodeManager" type="Node" parent="."]

[node name="CardNode" parent="HandNodeManager" instance=ExtResource( 2 )]
position = Vector2( 150, 580 )
scale = Vector2( 0.8, 0.8 )

[node name="CardNode2" parent="HandNodeManager" instance=ExtResource( 2 )]
position = Vector2( 330, 580 )
scale = Vector2( 0.8, 0.8 )

[node name="CardNode3" parent="HandNodeManager" instance=ExtResource( 2 )]
position = Vector2( 510, 580 )
scale = Vector2( 0.8, 0.8 )

[node name="CardNode4" parent="HandNodeManager" instance=ExtResource( 2 )]
position = Vector2( 690, 580 )
scale = Vector2( 0.8, 0.8 )

[node name="CardNode5" parent="HandNodeManager" instance=ExtResource( 2 )]
position = Vector2( 870, 580 )
scale = Vector2( 0.8, 0.8 )

[node name="ShipNodeManager" type="Node" parent="."]
script = ExtResource( 13 )

[node name="bow" parent="ShipNodeManager" instance=ExtResource( 4 )]
position = Vector2( 820, 231 )
scale = Vector2( 0.6, 0.6 )

[node name="port" parent="ShipNodeManager" instance=ExtResource( 4 )]
position = Vector2( 504, 117 )
scale = Vector2( 0.6, 0.6 )

[node name="starboard" parent="ShipNodeManager" instance=ExtResource( 4 )]
position = Vector2( 501, 328 )
scale = Vector2( 0.6, 0.6 )

[node name="stern" parent="ShipNodeManager" instance=ExtResource( 4 )]
position = Vector2( 201, 227 )
scale = Vector2( 0.6, 0.6 )

[node name="DiscardPile" parent="." instance=ExtResource( 5 )]
position = Vector2( 974, 396 )
scale = Vector2( 0.5, 0.5 )
z_index = -1

[node name="GameOverlay" parent="." instance=ExtResource( 10 )]
layer = -1

[node name="AiCardManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="AiCard" parent="AiCardManager" instance=ExtResource( 14 )]
position = Vector2( 128, -128 )

[node name="AiCard2" parent="AiCardManager" instance=ExtResource( 14 )]
position = Vector2( 320, -128 )

[node name="AiCard3" parent="AiCardManager" instance=ExtResource( 14 )]
position = Vector2( 504, -128 )

[node name="AiCard4" parent="AiCardManager" instance=ExtResource( 14 )]
position = Vector2( 680, -128 )

[node name="AiCard5" parent="AiCardManager" instance=ExtResource( 14 )]
position = Vector2( 880, -128 )

[node name="CardManager" parent="." instance=ExtResource( 8 )]

[node name="Card" parent="CardManager" instance=ExtResource( 3 )]
position = Vector2( 150, 580 )

[node name="Card2" parent="CardManager" instance=ExtResource( 3 )]
position = Vector2( 330, 580 )

[node name="Card3" parent="CardManager" instance=ExtResource( 3 )]
position = Vector2( 510, 580 )

[node name="Card4" parent="CardManager" instance=ExtResource( 3 )]
position = Vector2( 690, 580 )

[node name="Card5" parent="CardManager" instance=ExtResource( 3 )]
position = Vector2( 870, 580 )

[node name="IncomingAnnouncement" parent="." instance=ExtResource( 11 )]

[node name="TurnTimer" parent="." instance=ExtResource( 9 )]
margin_left = 904.0
margin_top = 48.0
margin_right = 1012.0
margin_bottom = 156.001
mouse_filter = 2

[node name="ScoreCounter" parent="." instance=ExtResource( 12 )]
margin_left = 8.0
margin_top = 48.0
margin_right = 76.0
margin_bottom = 137.0

[connection signal="end_player_turn" from="GameOverlay" to="GameAI" method="_on_GameOverlay_end_player_turn"]
[connection signal="level_complete" from="GameOverlay" to="." method="_on_GameOverlay_level_complete"]
[connection signal="start_level" from="GameOverlay" to="GameAI" method="_on_GameOverlay_start_level"]
[connection signal="placed" from="AiCardManager/AiCard" to="GameAI" method="_on_AiCard_placed"]
[connection signal="placed" from="AiCardManager/AiCard2" to="GameAI" method="_on_AiCard2_placed"]
[connection signal="placed" from="AiCardManager/AiCard3" to="GameAI" method="_on_AiCard3_placed"]
[connection signal="placed" from="AiCardManager/AiCard4" to="GameAI" method="_on_AiCard4_placed"]
[connection signal="placed" from="AiCardManager/AiCard5" to="GameAI" method="_on_AiCard5_placed"]
[connection signal="player_hand_discarded" from="CardManager" to="ShipNodeManager" method="_on_CardManager_player_hand_discarded"]
[connection signal="placed" from="CardManager/Card" to="GameAI" method="_on_Card_placed"]
[connection signal="placed" from="CardManager/Card2" to="GameAI" method="_on_Card2_placed"]
[connection signal="placed" from="CardManager/Card3" to="GameAI" method="_on_Card3_placed"]
[connection signal="placed" from="CardManager/Card4" to="GameAI" method="_on_Card4_placed"]
[connection signal="placed" from="CardManager/Card5" to="GameAI" method="_on_Card5_placed"]
[connection signal="player_turn" from="IncomingAnnouncement" to="GameAI" method="_on_IncomingAnnouncement_player_turn"]
[connection signal="player_time_out" from="TurnTimer" to="GameAI" method="_on_TurnTimer_player_time_out"]
